tests/copies/newAndNeedChangeTests/fail/BitXorAssign.java
package fail;

import java.lang.System;

public class BitXorAssign {

  public static void main(String[] args ) {
    5 ^= "hello";
  }

}
